Fix header causing horizontal spacing issues

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 60%;
+  margin: 0 auto;
 }
 
 .main {
@@ -21,7 +23,9 @@ body {
 #site-header {
   display: flex;
   justify-content: space-between;
-  padding: 2rem 10rem;
+  padding: 2rem 3%;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .navigation {
@@ -29,7 +33,8 @@ body {
   margin: 0;
   list-style: none;
   display: flex;
-  gap: 1.5rem;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 
 .intro {
@@ -40,7 +45,3 @@ body {
   align-items: center;
 }
 
-body {
-  width: 60%;
-  margin: 0 auto;
-}
